--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,16 @@
   "background": {
     "service_worker": "worker.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["*://*.youtube.com/*"],
+      "js": ["youtube.js"]
+    },
+    {
+      "matches": ["*://*/*"],
+      "exclude_matches": ["*://*.youtube.com/*"],
+      "js": ["blocker.js"]
+    }
+  ],
   "permissions": ["scripting", "activeTab"]
 }
